--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   ffmpeg_kit_flutter_new: ^1.6.1
   provider: ^6.1.2
   path_provider: ^2.1.2
+  url_launcher: ^6.3.1
+  gallery_saver: ^2.3.2
+  disk_space: ^0.2.1
+  intl: ^0.18.1
+  uuid: ^4.3.3
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
