--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   path_provider: ^2.1.2
   url_launcher: ^6.3.1
   gallery_saver: ^2.3.2
-  disk_space: ^0.2.1
+  # disk_space: ^0.2.1  # Removido para resolver problema de namespace
   intl: ^0.18.1
   uuid: ^4.3.3
   share_plus: ^7.2.1
