fixes audio cconversion

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   file_picker: ^10.1.9
   permission_handler: ^11.3.0
   just_audio: ^0.9.36
-  ffmpeg_kit_flutter_new: ^1.6.1
+  # ffmpeg_kit_flutter_new: ^1.6.1  # Substituído por flutter_quick_video_encoder
+  flutter_quick_video_encoder: ^1.7.2  # Usa APIs nativas para processamento de vídeo
   provider: ^6.1.2
   path_provider: ^2.1.2
   url_launcher: ^6.3.1
@@ -49,6 +50,7 @@ dependencies:
   intl: ^0.18.1
   uuid: ^4.3.3
   share_plus: ^7.2.1
+  ffmpeg_kit_flutter_new: ^1.6.1
 
 dev_dependencies:
   flutter_test:
